--- a/web_flask/templates/team.html
+++ b/web_flask/templates/team.html
@@ -25,15 +25,15 @@
 						<tr></tr>
 						<tr>
 							<td><img class="rounded-circle mr-2" width="30" height="30"
-									src="assets/img/avatars/avatar2.jpeg">Viet Tran</td>
+									src="{{ url_for('static', filename = 'img/users/viet.jpg') }}">Viet Tran</td>
 						</tr>
 						<tr>
 							<td><img class="rounded-circle mr-2" width="30" height="30"
-									src="assets/img/avatars/avatar2.jpeg">Colson Scott</td>
+									src="{{ url_for('static', filename = 'img/users/colson.jpg') }}">Colson Scott</td>
 						</tr>
 						<tr>
 							<td><img class="rounded-circle mr-2" width="30" height="30"
-									src="assets/img/avatars/avatar2.jpeg">Gunter Pearson</td>
+									src="{{ url_for('static', filename = 'img/users/gunter.jpg') }}">Gunter Pearson</td>
 						</tr>
 					</tbody>
 					<tfoot>
