--- a/web_flask/templates/layout.html
+++ b/web_flask/templates/layout.html
@@ -76,7 +76,7 @@
 							<li class="nav-item dropdown no-arrow" role="presentation">
 								<div class="nav-item dropdown no-arrow"><a class="dropdown-toggle nav-link"
 										data-toggle="dropdown" aria-expanded="false" href="#"><span
-											class="d-none d-lg-inline mr-2 text-gray-600 small">User Name</span><img
+											class="d-none d-lg-inline mr-2 text-gray-600 small">{{ name }}</span><img
 											class="border rounded-circle img-profile"
 											src="{{ url_for('static', filename = 'img/avatars/avatar1.jpeg') }}"></a>
 									<div class="dropdown-menu shadow dropdown-menu-right animated--grow-in" role="menu">
