--- a/web_flask/static/css/index.css
+++ b/web_flask/static/css/index.css
@@ -101,3 +101,13 @@ button.link {
 button.link:hover {
   opacity: 0.7;
 }
+
+.card-carousel {
+  display: flex;
+  flex-direction: column;
+}
+
+.interest-card-wrapper {
+  display: flex;
+  flex: 1;
+}
