--- a/web_flask/templates/landing.html
+++ b/web_flask/templates/landing.html
@@ -14,7 +14,7 @@
 <body>
     <nav class="navbar navbar-light navbar-expand bg-light navigation-clean">
         <div class="container"><a class="navbar-brand" href="#">Friendzy</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"></button>
-            <!-- <div class="collapse navbar-collapse" id="navcol-1"><a class="btn btn-primary ml-auto" role="button" href="#">Sign In</a></div> -->
+            <div class="collapse navbar-collapse" id="navcol-1"><a class="btn btn-primary ml-auto" role="button" href="{{ url_for('login') }}">Sign In</a></div>
         </div>
     </nav>
     <header class="masthead text-white text-center" style="background:url('static/img/bg-masthead.jpg')no-repeat center center;background-size:cover;">
@@ -25,11 +25,9 @@
                     <h1 class="mb-5">A better social app.</h1>
                 </div>
                 <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-                    <form>
                         <div class="form-row">
-                            <div class="col-12 col-md-3 offset-lg-4"><button class="btn btn-primary btn-block btn-lg" type="submit">Sign up!</button></div>
+                            <div class="col-12 col-md-3 offset-lg-4"><a href="{{ url_for('register') }}"><button class="btn btn-primary btn-block btn-lg" type="submit">Sign up!</button></a></div>
                         </div>
-                    </form>
                 </div>
             </div>
         </div>
@@ -92,11 +90,9 @@
                     <h2 class="mb-4">Ready to get started? Sign up now!</h2>
                 </div>
                 <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-                    <form>
                         <div class="form-row">
-                            <div class="col-12 col-md-3 offset-lg-4"><button class="btn btn-primary btn-block btn-lg" type="submit">Sign up!</button></div>
+                            <div class="col-12 col-md-3 offset-lg-4"><a href="{{ url_for('register') }}"><button class="btn btn-primary btn-block btn-lg" type="submit">Sign up!</button></a></div>
                         </div>
-                    </form>
                 </div>
             </div>
         </div>
@@ -105,7 +101,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 my-auto h-100 text-center text-lg-left">
-                    <ul class="list-inline mb-2">
+                    <!-- <ul class="list-inline mb-2">
                         <li class="list-inline-item"><a href="#">About</a></li>
                         <li class="list-inline-item"><span>⋅</span></li>
                         <li class="list-inline-item"><a href="#">Contact</a></li>
@@ -113,7 +109,7 @@
                         <li class="list-inline-item"><a href="#">Terms of &nbsp;Use</a></li>
                         <li class="list-inline-item"><span>⋅</span></li>
                         <li class="list-inline-item"><a href="#">Privacy Policy</a></li>
-                    </ul>
+                    </ul> -->
                     <p class="text-muted small mb-4 mb-lg-0">© Friendzy 2020. All Rights Reserved.</p>
                 </div>
                 <div class="col-lg-6 my-auto h-100 text-center text-lg-right">
