--- a/web_flask/templates/layout.html
+++ b/web_flask/templates/layout.html
@@ -75,20 +75,20 @@
 							</li>
 							<li class="nav-item dropdown no-arrow" role="presentation">
 								<div class="nav-item dropdown no-arrow"><a class="dropdown-toggle nav-link"
-										data-toggle="dropdown" aria-expanded="false" href="#"><span
+										data-toggle="dropdown" aria-expanded="false" href="{{ url_for('user_profile') }}"><span
 											class="d-none d-lg-inline mr-2 text-gray-600 small">{{ name }}</span><img
 											class="border rounded-circle img-profile"
 											src="{{ url_for('static', filename = 'img/avatars/avatar1.jpeg') }}"></a>
 									<div class="dropdown-menu shadow dropdown-menu-right animated--grow-in" role="menu">
-										<a class="dropdown-item" role="presentation" href="#"><i
+										<a class="dropdown-item" role="presentation" href="{{ url_for('user_profile') }}"><i
 												class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Profile</a><a
-											class="dropdown-item" role="presentation" href="#"><i
-												class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Settings</a>
-										<a class="dropdown-item" role="presentation" href="#"><i
+											class="dropdown-item" role="presentation" href="{{ url_for('our_team') }}"><i
+												class="fas fa-users fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Team</a>
+										<!-- <a class="dropdown-item" role="presentation" href="#"><i
 												class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Activity
-											log</a>
+											log</a> -->
 										<div class="dropdown-divider"></div><a class="dropdown-item" role="presentation"
-											href="#"><i
+											href="http://127.0.0.1:5003/login"><i
 												class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Logout</a>
 									</div>
 								</div>
