--- a/web_flask/templates/layout.html
+++ b/web_flask/templates/layout.html
@@ -87,8 +87,10 @@
 										<!-- <a class="dropdown-item" role="presentation" href="#"><i
 												class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Activity
 											log</a> -->
-										<div class="dropdown-divider"></div><a class="dropdown-item" role="presentation"
-											href="http://127.0.0.1:5003/login"><i
+										<div class="dropdown-divider"></div>
+										<!-- Change href to http://127.0.0.1:5003/login or friendzfor.me/login if running locally or on server-->	
+										<a class="dropdown-item" role="presentation"
+											href="https://friendzfor.me/login"><i
 												class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Logout</a>
 									</div>
 								</div>
