Updated static path to team member pictures in landing page

--- a/web_flask/templates/landing.html
+++ b/web_flask/templates/landing.html
@@ -118,10 +118,6 @@
 					wanted to step in and change things.
 				</p>
 				<img src="{{ url_for('static', filename = 'img/friendzy_note.png') }}" alt="" style="margin-top: 2rem;">
-				<!-- Add Link to Project Repo here -->
-				<!-- <div>
-					<a href="https://github.com/veeteeran/Friendzy">Check out the code that makes Friendzy work!</a>
-				</div> -->
 				<div class="col-12 col-md-3" style="margin-top: 3rem;">
 					<a href="https://github.com/veeteeran/Friendzy">
 						<button id="repo" class="btn btn-primary btn-block btn-lg" type="submit">
@@ -145,7 +141,7 @@
 					<div class="mx-auto testimonial-item mb-5 mb-lg-0">
 						<a href="https://github.com/GunterPearson">
 							<img class="rounded-circle img-fluid mb-3"
-								src="{{ url_for('static', filename = 'img/users/gunter.jpg') }}">
+								src="{{ url_for('static', filename = 'img/users/b3383ce7-8864-4436-93d9-375573173c6e.jpg') }}">
 						</a>
 						<h5>Gunter Pearson</h5>
 						<div class="social-icons">
@@ -165,7 +161,7 @@
 					<div class="mx-auto testimonial-item mb-5 mb-lg-0">
 						<a href="https://github.com/OctopusHugz">
 							<img class="rounded-circle img-fluid mb-3"
-								src="{{ url_for('static', filename = 'img/users/colson.jpg') }}">
+								src="{{ url_for('static', filename = 'img/users/f79409a4-53a0-44e6-813f-64ee579be1ef.jpg') }}">
 						</a>
 						<h5>Colson Scott</h5>
 						<div class="social-icons">
@@ -185,7 +181,7 @@
 					<div class="mx-auto testimonial-item mb-5 mb-lg-0">
 						<a href="https://github.com/veeteeran">
 							<img class="rounded-circle img-fluid mb-3"
-								src="{{ url_for('static', filename = 'img/users/viet.jpg') }}">
+								src="{{ url_for('static', filename = 'img/users/165cf52c-06b3-44cb-be7b-341989ecd10f.jpg') }}">
 						</a>
 						<h5>Viet Tran</h5>
 						<div class="social-icons">
