Changed CTA section at bottom of landing page and added img to static folder. Move index.css from bootstrap to top of links for custom CSS rules to work.

--- a/web_flask/static/css/landing2.css
+++ b/web_flask/static/css/landing2.css
@@ -4,7 +4,7 @@
 }
 
 .hero-container {
-  padding-top: 20vh;
+  padding-top: 15vh;
   color: white;
 }
 
@@ -51,4 +51,9 @@ div a:hover {
 
 #sign-in {
   margin-top: 0;
+}
+
+footer.footer {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
