Added link to github on Readme, edit viet's url on LinkedIn

--- a/web_flask/templates/landing.html
+++ b/web_flask/templates/landing.html
@@ -188,7 +188,7 @@
 						</a>
 						<h5>Viet Tran</h5>
 						<div class="social-icons">
-							<a href="https://www.linkedin.com/in/viet-tran-2881bb1a1/"><img
+							<a href="https://www.linkedin.com/in/viet-t/"><img
 									src="{{ url_for('static', filename = 'img/icons/linkedin.png') }}"
 									style="box-shadow: none;"></a>
 							<a href="https://twitter.com/veeteeran"><img
