--- a/web_flask/templates/layout.html
+++ b/web_flask/templates/layout.html
@@ -78,7 +78,7 @@
 										data-toggle="dropdown" aria-expanded="false" href="{{ url_for('user_profile') }}"><span
 											class="d-none d-lg-inline mr-2 text-gray-600 small">{{ name }}</span><img
 											class="border rounded-circle img-profile"
-											src="{{ url_for('static', filename = 'img/avatars/avatar1.jpeg') }}"></a>
+											src="{{ url_for('static', filename = 'img/dogs/image2.jpeg') }}"></a>
 									<div class="dropdown-menu shadow dropdown-menu-right animated--grow-in" role="menu">
 										<a class="dropdown-item" role="presentation" href="{{ url_for('user_profile') }}"><i
 												class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Profile</a><a
@@ -90,7 +90,7 @@
 										<div class="dropdown-divider"></div>
 										<!-- Change href to http://127.0.0.1:5003/login or friendzfor.me/login if running locally or on server-->	
 										<a class="dropdown-item" role="presentation"
-											href="http://127.0.0.1:5003/login"><i
+											href="https://friendzfor.me/login"><i
 												class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Logout</a>
 									</div>
 								</div>
